# SlicerMRML

./: CMakeLists.txt  README.md  notes.md  setup.py  test.py  vtkmodulesetup.py
Libs/ITKFactoryRegistration/: CMakeLists.txt  itkFactoryRegistration.h  vtk.module
Libs/MRML/Core/: CMakeLists.txt  vtk.module
Libs/MRML/DisplayableManager/: CMakeLists.txt  vtk.module
Libs/MRML/Logic/: CMakeLists.txt  vtk.module
Libs/vtkAddon/: setup.py
Libs/vtkITK/: CMakeLists.txt
Libs/vtkSegmentationCore/: CMakeLists.txt  vtk.module  vtkSegmentationCoreConfigure.h.in
Libs/vtkTeem/: CMakeLists.txt  vtk.module
SuperBuild/: External_DCMTK.cmake  External_ITK.cmake
